objects/Dispatch_Setting__c.object
<CustomObject>
    <description>Setting used to configure dispatch queueables.</description>
    <fields>
        <fullName>Chain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether of not the queueable should continue chaining after execution.</description>
        <inlineHelpText>Should the queue continue chaining?</inlineHelpText>
        <label>Chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatch_Query__c</fullName>
        <description>The query used to select records to dispatch.</description>
        <inlineHelpText>The query used to select records to dispatch.</inlineHelpText>
        <label>Dispatch Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <description>Headers in json format passed to the callout.</description>
        <inlineHelpText>Headers in json format passed to the callout.</inlineHelpText>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_By_Field_API_Name__c</fullName>
        <defaultValue>&quot;CreatedDate&quot;</defaultValue>
        <description>The API name of the field to order by.</description>
        <inlineHelpText>The API name of the field to order by.</inlineHelpText>
        <label>Order By Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Direction__c</fullName>
        <description>Sort direction for records consumed bu the dispatch process.</description>
        <inlineHelpText>Sort direction for records consumed bu the dispatch process.</inlineHelpText>
        <label>Order Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DESC</fullName>
                    <default>true</default>
                    <label>DESC</label>
                </value>
                <value>
                    <fullName>ASC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_URL__c</fullName>
        <description>The URL of the site to post messages to.</description>
        <inlineHelpText>The URL of the site to post messages to.</inlineHelpText>
        <label>Remote URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Field_API_Name__c</fullName>
        <defaultValue>&quot;Status__c&quot;</defaultValue>
        <description>The API name of the field used to track the status. Defaults to Status__c</description>
        <inlineHelpText>The API name of the field used to track the status. Defaults to Status__c</inlineHelpText>
        <label>Status Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dispatch Setting</label>
    <nameField>
        <label>DispatchSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispatch Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>